# llmtest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clickable.yaml  llmtest.apparmor  llmtest.desktop.in  main.cpp  manifest.json.in
plugins/: CMakeLists.txt
plugins/Example/: example.cpp  example.h  plugin.cpp  plugin.h
plugins/Model/: CMakeLists.txt  common-ggml.h  model.cpp  model.h  plugin.cpp  plugin.h  qmldir
plugins/ModelFetch/: CMakeLists.txt  modelFetch.cpp  modelFetch.h  plugin.cpp  plugin.h  qmldir
po/: llmtest.georgi.pot
qml/: Home.qml  Main.qml  ModelFetch.qml  ModelSelect.qml  qml.qrc
